# DyoAgents

./: .gitignore  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json
docs/: docusaurus.config.js  package-lock.json  sidebars.js
docs/docs/: intro.md
llm/: docker-compose.yml
llm/litellm/: proxy_server_config.yaml
src/backend/: Dockerfile  README.md  ag_mo_agent.py  ag_mo_code_executor_agent.py  ag_mo_helper.py  ag_mo_mcp_agent.py  ag_mo_orchestrator_agent.py  ag_mo_proxy_agent.py  ag_mo_rag_agent.py  ag_mo_web_surfer_agent.py  database.py  index_builder.py  litellm_settings.yaml  main.py  mcp_server.py  pyproject.toml  sample.env  schemas.py
src/backend/.llamaindex/: chroma.sqlite3
src/backend/chroma_rag_index/: chroma.sqlite3  docstore.json  index_store.json
src/backend/data/: team-template.json
src/backend/data/teams-definitions/: team-11.json  team-2.json
src/backend/local_mcp/: __init__.py  mcp_http_client.py  mcp_models.py  mcp_registry.py  mcp_sse_client.py  mcp_tools.py  server_params.py  tripadvisor_tool.py  types.py  weather_tool.py
src/backend/providers/: ai_foundry_provider.py  azure_openai_provider.py  base.py  docker_provider.py  foundry_local_provider.py  github_provider.py  llamaindex_provider.py  mcp_provider.py  ollama_provider.py  registry.py
src/backend/storage/: chroma.sqlite3  docstore.json  index_store.json
src/frontend/: .env  Dockerfile  README.md
src/frontend/src/: main.tsx
src/frontend/src/components/: Footer.tsx  agents-definition.ts  app-sidebar.tsx
src/mcp/: Dockerfile  pyproject.toml  sample.env
(+5 files in other folders)
